Fix brand logo align

--- a/src/pages/Homepage/components/Brand.scss
+++ b/src/pages/Homepage/components/Brand.scss
@@ -15,6 +15,7 @@
   .list {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
     gap: 12px;
     width: 100%;
     overflow: scroll;
@@ -22,9 +23,8 @@
       display: none;
     }
     img {
-      width: 80px;
-      height: 80px;
-      max-width: 80px;
+      max-width: 120px;
+      max-height: 120px;
       border-radius: 7px;
     }
   }
